preparation for the sixth point

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     "autoload": {
         "files": [
             "src/genDiff.php",
-            "src/Parsers.php"
+            "src/Parsers.php",
+            "src/Formatter.php"
         ],
         "psr-4": {
             "Differ\\Tests\\": "tests",
