preparation to work stylish

--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "files": [
             "src/genDiff.php",
             "src/Parsers.php",
-            "src/Formatter.php"
+            "src/Formatter.php",
+            "src/Build.php"
         ],
         "psr-4": {
             "Differ\\Tests\\": "tests",
