--- a/composer.json
+++ b/composer.json
@@ -23,8 +23,7 @@
     ],
     "require": {
         "docopt/docopt": "^1.0",
-        "symfony/yaml": "^5.4",
-        "funct/funct": "^1.5"
+        "symfony/yaml": "^5.4"
     },
     "require-dev": {
         "phpunit/phpunit": "*",
