--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     ],
     "autoload": {
         "files": [
-            "src/genDiff.php",
+            "src/Differ.php",
             "src/Parsers.php",
             "src/Formatter.php",
             "src/Builder.php",
