--- a/.github/workflows/workflows.yml
+++ b/.github/workflows/workflows.yml
@@ -1,28 +1,28 @@
-name: PHP CI
+name: linter and tests
 
 on:
-  - push
-  - pull_request
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-        # Check-out repository under GitHub workspace
       - uses: actions/checkout@v2
-        # Step's name
+
       - name: Setup PHP
-        # Action gives to setup the PHP environment to test application
         uses: shivammathur/setup-php@v2
         with:
-          # Specify the PHP version
           php-version: '7.4.14'
+
       - name: Install
-        # Install project
         run: make install
+
       - name: Run linter
-        # Run Linter
         run: make lint
+
       - name: Run test & publish code coverage
         uses: paambaati/codeclimate-action@v2.6.0
         env:
