--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
     "require": {
         "docopt/docopt": "^1.0",
         "symfony/yaml": "^5.4",
-        "lstrojny/functional-php": "^1.17"
+        "lstrojny/functional-php": "^1.17",
+        "ext-json": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "*",
